--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,43 @@
-.basictext {
-    font-size: 60px;
+.root {
+    display: 'flex';
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    justify-items: center;
+}
+
+.innerDiv {
+margin: 30px;
+}
+.mainImg{
+border-radius: 4px;
+}
+
+a {
+    text-decoration: none !important;
+    color: black;
+}
+
+button {
+    background-color: white;
+    border: 2px solid #2C2CFF;
+    border-radius: 5px;
+    width: 50%;
+    height: 40px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 480px) {
+    .root {
+        display: 'flex';
+        flex-direction: column;
+    }
+    button {
+        width: 80%;
+        height: 60px
+    }
+    .innerDiv {
+        margin: 10px;
+    }
 }
